fixed horizontal scrollbar bug -- set a width on the cite element within the testimonial section

--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -282,7 +282,8 @@ header.page-header {
       font-size: 22px;
       position: relative;
       left: 80px;
-      bottom: 27px; }
+      bottom: 27px;
+      width: 100px; }
     .testimonial .quote-block .divider {
       margin: 15px 0 0 0;
       display: inline-block; }
@@ -434,9 +435,6 @@ header.page-header {
       display: inline-block;
       margin: 15px 0 13px;
       padding: 0; }
-  @media only screen and (max-width: 767px) {
-    .clients .clients .client-details {
-      border: 1px solid red; } }
 
 /*__BLOGS SECTION__ */
 .blogs {
