--- a/assets/styles/sass/2-layouts/_clients.sass
+++ b/assets/styles/sass/2-layouts/_clients.sass
@@ -35,14 +35,3 @@
       display: inline-block
       margin: 15px 0 13px
       padding: 0
-  
-
-
-
-
-  @media only screen and (max-width: 767px)
-
-    .clients
-
-      .client-details
-        border: 1px solid red
