--- a/assets/styles/sass/2-layouts/_testimonials.sass
+++ b/assets/styles/sass/2-layouts/_testimonials.sass
@@ -33,6 +33,7 @@
       position: relative
       left: 80px
       bottom: 27px
+      width: 100px
 
     
     .divider
